some better logging & generate result file.

--- a/doc/report.tex
+++ b/doc/report.tex
@@ -40,4 +40,16 @@ Enri Miho, 0929003\\
 Report
 \end{center}
 
+\section{Project application phase}
+\subsection{Experiment overview and diagram}
+\subsection{Other publications}
+
+\section{Project execution phase}
+\subsection{Experiment execution monitoring}
+\subsection{Execution model analysis}
+\subsection{Data characterisation}
+\subsection{Validation requirements}
+\subsection{Data Management Plan (DMP)}
+\subsection{Data sharing}
+
 \end{document}
