continue writing report

--- a/doc/report.tex
+++ b/doc/report.tex
@@ -60,7 +60,7 @@ Figure 1 depicts the experiment. It consists of the following actions:
 \end{itemize}
 \begin{figure}[h]
   \centering
-    \includegraphics[scale=0.15]{latex_images/diagram}
+    \includegraphics[scale=0.15]{diagram}
     \caption{State diagram of the experiment}
 \end{figure}
 
@@ -204,7 +204,15 @@ zlib1g
 \end{enumerate}
 
 \subsection{Data characterisation}
+All the files used and produced by executing our experiment (see result of SPARQL query 3) were imported in DROID\footnote{\url{http://digital-preservation.github.io/droid/}} to identify their format as well as extract other features. A report of each file was generated and exported in CSV file (see accompanied file \verb|RelationshipVolcanousEarthquakes.csv|). Moreover, we extracted the size and mime-types of files and used excel sheets to aggregate and visualize results (see figure 2).
+\begin{figure}[h]
+  \centering
+    \includegraphics[scale=0.85]{graph}
+    \caption{The total number of files used and generated through the experiment is {\bf 12} with a sum size of {\bf 14,66 MB}.}
+\end{figure}
+
 \subsection{Validation requirements}
+
 \subsection{Data Management Plan (DMP)}
 \subsection{Data sharing}
 
