--- a/doc/report.tex
+++ b/doc/report.tex
@@ -228,6 +228,7 @@ All entries should have same formating structure & Tabulated formating structure
 \end{table}
 
 \subsection{Data Management Plan (DMP)}
+The data management plan can be found in a separate pdf file in the same directory as this report.
 
 \subsection{Data sharing}
 The sources can be found at \url{https://github.com/enrimilan/dp-experiment}
