--- a/doc/report.tex
+++ b/doc/report.tex
@@ -231,6 +231,7 @@ All entries should have same formating structure & Tabulated formating structure
 The data management plan can be found in a separate pdf file in the same directory as this report.
 
 \subsection{Data sharing}
-The sources can be found at \url{https://github.com/enrimilan/dp-experiment}
+This work can be cited as \emph{10.5281/zenodo.55844}. (\url{https://zenodo.org/record/55844#.V2Rgq_mLRhF})\\
+The sources can be also found at \url{https://github.com/enrimilan/dp-experiment}
 
 \end{document}
